[gd_scene load_steps=2 format=2]

[ext_resource path="res://Inventory/script/slot.gd" type="Script" id=2]

[node name="slot" type="Control"]
margin_right = 64.0
margin_bottom = 64.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="item" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="MouseDetecter" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="MouseDetecter" to="." method="_on_MouseDetecter_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetecter" to="." method="_on_MouseDetecter_mouse_exited"]
